--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "moment": "^2.22.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-sizeme": "^2.5.2"
+    "react-sizeme": "github:yuzu367/react-sizeme#master"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -80,7 +80,7 @@
     "moment": "^2.22.1",
     "opencollective": "^1.0.3",
     "opencollective-postinstall": "^2.0.1",
-    "react-sizeme": "^2.5.2"
+    "react-sizeme": "github:yuzu367/react-sizeme#master"
   },
   "collective": {
     "type": "opencollective",
