--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "css-layout": "^1.1.1",
     "moment": "^2.22.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-sizeme": "github:yuzu367/react-sizeme#master"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
